--- a/src/app/ui/components/navbar/navbar.component.scss
+++ b/src/app/ui/components/navbar/navbar.component.scss
@@ -275,7 +275,7 @@
       .subcategories {
         background-color: #ebebeb;
         padding-right: 20px;
-        min-width: 310px;
+        min-width: 380px;
 
         .subcategory-header {
           display: flex;
@@ -385,6 +385,7 @@
             padding: 15px;
             display: flex;
             border: 1px solid #e0e0e0;
+            height: 243px;
 
             img {
               width: 100px;
